<resources>
    <string name="back_alert">Press back one more time to exit the application.</string>
    <string name="app_name">TrackExpenses</string>
    <string name="main_title">Home</string>
    <string name="expense_title">Add Expense</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="save">Save</string>
    <string name="expense_edit">Edit an expense</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="dismiss">Dismiss</string>
    <string name="start_alert_content">"The period of time have not started yet.\nReset the application (Delete data) or come back on the "</string>
    <string name="end_alert_content">"You reached the end of the time defined when you first launch the application.\nYou can still access the expenses made but cannot add any now."</string>
    <string name="intro_str">This app allow you to track your expenses\n for a defined period of time</string>
    <string name="euro_sign">€</string>
    <string name="dollar_sign">$</string>
    <string name="mark_sign">KM </string>
    <string name="end_date_key">end_date</string>
    <string name="currency_key">currency</string>
    <string name="amount_key">amount</string>
    <string name="version_key">version</string>
    <string name="reset_key">reset</string>
    <string name="yes">Yes</string>
    <string name="libraries_key">libraries</string>
    <string name="remaining_key">remaining</string>
    <string name="allowance_key">next_week_allowance</string>
    <string name="spent_key">spent</string>
    <string name="period_key">period</string>
    <string name="top_category_key">top_category</string>
    <string name="overview_key">overview</string>
    <string name="remaining_title">Total Amount remaining</string>
    <string name="allowance_title">Next Week allowance</string>
    <string name="spent_title">Total Amount spent</string>
    <string name="top_category_title">Most expensive category</string>
    <string name="period_title">Period dates</string>
</resources>